--- a/watchers/Cargo.toml
+++ b/watchers/Cargo.toml
@@ -14,11 +14,12 @@ rstest = "0.25.0"
 tempfile = "3.13.0"
 
 [dependencies]
-aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust", rev = "656f3c9" }
+aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust", rev = "c6409796f3859c1c610339682d90e0a03659ccdd" }
 wayland-client = "0.31.7"
-wayland-protocols = { version = "0.32.5", features = ["staging", "client" ]}
+wayland-protocols = { version = "0.32.6", features = ["staging", "client" ]}
 wayland-protocols-plasma = { version = "0.3.5", features = ["client"] }
 wayland-protocols-wlr = { version = "0.3.5", features = ["client"] }
+cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit" }
 x11rb = { version = "0.13.1", features = ["screensaver"] }
 zbus = {version = "5.1.0", optional = true}
 chrono = "0.4.38"
