--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 /target
 src/bundle/logo.argb32
 lcov.info
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
